--- a/BikeStore/Scripts/Card/goodcard.css
+++ b/BikeStore/Scripts/Card/goodcard.css
@@ -1,2 +1,20 @@
-﻿body {
+﻿.Table {
+    display: table;
+    width: auto;
+    background-color: #eee;
+    border: 1px solid #666666;
+    border-spacing: 5px; /*cellspacing:poor IE support for  this*/
+    /* border-collapse:separate;*/
+}
+
+.Row {
+    display: table-row;
+    width: auto;
+}
+
+.Cell {
+    float: left; /*fix for  buggy browsers*/
+    display: table-column;
+    width: 200px;
+    background-color: #ccc;
 }
