--- a/BikeStore/Content/Site.css
+++ b/BikeStore/Content/Site.css
@@ -20,7 +20,51 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 2800px;
+}
+
+.divTable{
+	display: table;
+	width: 100%;
+}
+.divTableRow {
+	display: table-row;
+}
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
+}
+.divTableCell {
+	display: inline-block;
+    width: 116px;
+    min-height: 75px;
+    margin-bottom: 20px;
+    margin-right: 15px;
+    vertical-align: top;
+    font-size: 16px;
+    text-align: center;
+    color: white;
+    background: #3498db;
+    border: 2px solid #2c3e50;
+}
+.divTableHeading {
+	background-color: #EEE;
+	display: table-header-group;
+	font-weight: bold;
+}
+.divTableFoot {
+	background-color: #EEE;
+	display: table-footer-group;
+	font-weight: bold;
+}
+.divTableBody {
+	display: table-row-group;
+}
+
+.catalog {
+    width: 400px;
+    background: #ecf0f1;
+    box-shadow: 0 0 3px #999999;
 }
 
 
