Added different dll for data, entites, web and logic. Repository implemenatation

--- a/BikeStore/Views/AdminPanel/ControlPanel.cshtml
+++ b/BikeStore/Views/AdminPanel/ControlPanel.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<BikeStore.Models.Store.Good>
+﻿@model IList<BikeEntities.Good>
 @{
     ViewBag.Title = "ControlPanel";
     Layout = "~/Views/Shared/_Layout.cshtml";
