--- a/BikeStore/Views/AdminPanel/Edit.cshtml
+++ b/BikeStore/Views/AdminPanel/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BikeStore.Models.Store.GoodViewModel
+﻿@model BikeViewModels.GoodViewModel
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
