--- a/BikeStore/Views/Shared/_ModeratorLayout.cshtml
+++ b/BikeStore/Views/Shared/_ModeratorLayout.cshtml
@@ -4,14 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/AdminPanel/css")
+    @Styles.Render("~/Content/KendoGrid/css")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/angular")
-    @Scripts.Render("~/bundles/index.run")
+    @Scripts.Render("~/bundles/kendo")
 
 </head>
-<body ng-app="BikeStore">
-    @Scripts.Render("~/bundles/jquery")
+<body>
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -41,9 +40,6 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
 
 </body>
