--- a/BikeStore/Views/RoleManagement/RoleManagementView.cshtml
+++ b/BikeStore/Views/RoleManagement/RoleManagementView.cshtml
@@ -1,23 +1,49 @@
-﻿@using BikeDataAccess
-@model ApplicationUser
-@{
+﻿@{
     ViewBag.Title = "Roles management";
+    Layout = "~/Views/Shared/_ModeratorLayout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
-@using (Html.BeginForm("AssignRole", "RoleManagement"))
-{
-    @Html.AntiForgeryToken()
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+<br>
+<br>
+<div class="page-content">
+    <div class="row">
+        <div class="col-md-2">
+            <div class="sidebar content-box" style="display: block;">
+                <ul class="nav">
+                    <!-- Main menu -->
+                    <li>@Html.ActionLink("Goods list", "ControlPanel", "AdminPanel")</li>
+                    <li>@Html.ActionLink("Add new", "Create", "AdminPanel")</li>
+                    <li class="current">
+                        @if (User.IsInRole("Admin"))
+                    {
+                        @Html.ActionLink("Manage moderators", "RoleManagementView", "RoleManagement")
+                    }
+                </li>
+            </ul>
         </div>
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Give moderator role" class="btn btn-default" />
+    </div>
+    <div class="col-md-10">
+        <div class="row">
+            <div class="content-box-large">
+                <div class="panel-title">User role management</div>
+
+                <div class="panel-body">
+
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-xs-18 col-md-12">
+                                <div id="usersGrid" style="height:550px;">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
 
     </div>
-}
+</div>
+</div>
