New repositories, base entity

--- a/BikeStore/Views/AdminPanel/ControlPanel.cshtml
+++ b/BikeStore/Views/AdminPanel/ControlPanel.cshtml
@@ -28,9 +28,7 @@
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-xs-18 col-md-12">
-                                        <div id="grid" style="height:550px;">
-                                            
-                                        </div>
+                                        <div id="moderatorGrid" style="height:550px;"></div>
                                     </div>
                                 </div>
                             </div>
