--- a/BikeStore/Views/RoleManagement/RoleManagementView.cshtml
+++ b/BikeStore/Views/RoleManagement/RoleManagementView.cshtml
@@ -3,7 +3,6 @@
     Layout = "~/Views/Shared/_ModeratorLayout.cshtml";
 }
 
-
 <br>
 <br>
 <div class="page-content">
@@ -33,9 +32,8 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-xs-18 col-md-12">
-                                <div id="usersGrid" style="height:550px;">
-
-                                </div>
+                                
+                                <div id="roleGrid" style="height:550px;"></div>
                             </div>
                         </div>
                     </div>
