--- a/BikeStore/Views/AdminPanel/Create.cshtml
+++ b/BikeStore/Views/AdminPanel/Create.cshtml
@@ -64,7 +64,7 @@
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Manufacturer_ID, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.DropDownListFor(m => m.Manufacturer_ID, new SelectList(Model.ManufacturerVM, "Manufacturer_ID", "Name"), htmlAttributes: new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.Manufacturer_ID, new SelectList(Model.ManufacturerVM, "id", "Name"), htmlAttributes: new { @class = "form-control" })
                                     </div>
                                 </div>
                                 <br>
@@ -79,7 +79,7 @@
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Type_ID, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.DropDownListFor(m => m.Type_ID, new SelectList(Model.TypeVM, "Type_ID", "Name"), htmlAttributes: new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.Type_ID, new SelectList(Model.TypeVM, "id", "Name"), htmlAttributes: new { @class = "form-control" })
                                     </div>
                                 </div>
                                 <br>
