--- a/BikeStore/Views/Shared/_ModeratorLayout.cshtml
+++ b/BikeStore/Views/Shared/_ModeratorLayout.cshtml
@@ -8,6 +8,8 @@
     @Styles.Render("~/Content/KendoGrid/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/kendo")
+    @Scripts.Render("~/bundles/AdminPanel")
+    @Scripts.Render("~/bundles/RoleManagement")
 
 </head>
 <body>
