--- a/BikeStore/Views/AdminPanel/Create.cshtml
+++ b/BikeStore/Views/AdminPanel/Create.cshtml
@@ -33,7 +33,7 @@
                             <div class="container-fluid">
 
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                @Html.HiddenFor(model => model.Good_ID)
+                                @Html.HiddenFor(model => model.GoodId)
 
                                 <div class="form-group">
                                     @Html.LabelFor(Model => Model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -62,9 +62,9 @@
                                 </div>
                                 <br>
                                 <div class="form-group">
-                                    @Html.LabelFor(model => model.Manufacturer_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.LabelFor(model => model.ManufacturerId, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.DropDownListFor(m => m.Manufacturer_ID, new SelectList(Model.ManufacturerVM, "id", "Name"), htmlAttributes: new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.ManufacturerId, new SelectList(Model.ManufacturerVM, "id", "Name"), htmlAttributes: new { @class = "form-control" })
                                     </div>
                                 </div>
                                 <br>
@@ -77,9 +77,9 @@
                                 </div>
                                 <br>
                                 <div class="form-group">
-                                    @Html.LabelFor(model => model.Type_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.LabelFor(model => model.TypeId, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.DropDownListFor(m => m.Type_ID, new SelectList(Model.TypeVM, "id", "Name"), htmlAttributes: new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.TypeId, new SelectList(Model.TypeVM, "id", "Name"), htmlAttributes: new { @class = "form-control" })
                                     </div>
                                 </div>
                                 <br>
