--- a/BikeStore/Views/AdminPanel/Edit.cshtml
+++ b/BikeStore/Views/AdminPanel/Edit.cshtml
@@ -32,7 +32,7 @@
                         <div class="panel-body">
                             <div class="container-fluid">
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                @Html.HiddenFor(model => model.Good_ID)
+                                @Html.HiddenFor(model => model.GoodId)
 
                                 <div class="form-group">
                                     @Html.LabelFor(Model => Model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -61,9 +61,9 @@
                                 </div>
                                 <br>
                                 <div class="form-group">
-                                    @Html.LabelFor(model => model.Manufacturer_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.LabelFor(model => model.ManufacturerId, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.DropDownListFor(m => m.Manufacturer_ID, new SelectList(Model.ManufacturerVM, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.ManufacturerId, new SelectList(Model.ManufacturerVM, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
                                     </div>
                                 </div>
                                 <br>
@@ -76,9 +76,9 @@
                                 </div>
                                 <br>
                                 <div class="form-group">
-                                    @Html.LabelFor(model => model.Type_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.LabelFor(model => model.TypeId, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.DropDownListFor(m => m.Type_ID, new SelectList(Model.TypeVM, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.TypeId, new SelectList(Model.TypeVM, "Id", "Name"), htmlAttributes: new { @class = "form-control" })
                                     </div>
                                 </div>
                                 <br>
@@ -93,7 +93,7 @@
                 </div>
             </div>
         }
-        @using (Html.BeginForm("Delete", "AdminPanel", new { id = Model.Good_ID }, FormMethod.Post))
+        @using (Html.BeginForm("Delete", "AdminPanel", new { id = Model.GoodId }, FormMethod.Post))
         {
             @Html.AntiForgeryToken()
             <br>
